// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CaseNoteListItem /> should match the default snapshot 1`] = `
<div
  className="sc-ifAKCX guNQlg"
  data-qa="case-note"
>
  <div
    className="sc-EHOje iONyKS"
  >
    <span>
      Tuesday
    </span>
    <span>
      01/01/2019
    </span>
    <span>
      7:00 PM
    </span>
    User, Test
  </div>
  <div
    className="sc-bZQynM IutSs"
  >
    <h2
      className="sc-bdVaJa dbbMZC"
    >
      Achievements
       | 
      Gym
    </h2>
    <div
      className="sc-gzVnrw gNKPgp"
    >
      Creation date:
       
      <span>
        <span>
          Tuesday
        </span>
         - 
        <span>
          01/01/2019
        </span>
         -
         
        <span>
          9:00 PM
        </span>
      </span>
    </div>
    <pre
      className="sc-htoDjs hEHbwl"
    >
      Offender enjoys attending the gym.
    </pre>
  </div>
</div>
`;

exports[`<CaseNoteListItem /> should render the with amendments snapshot 1`] = `
<div
  className="sc-ifAKCX guNQlg"
  data-qa="case-note"
>
  <div
    className="sc-EHOje iONyKS"
  >
    <span>
      Tuesday
    </span>
    <span>
      01/01/2019
    </span>
    <span>
      7:00 PM
    </span>
    User, Test
  </div>
  <div
    className="sc-bZQynM IutSs"
  >
    <h2
      className="sc-bdVaJa dbbMZC"
    >
      Achievements
       | 
      Gym
    </h2>
    <div
      className="sc-gzVnrw gNKPgp"
    >
      Creation date:
       
      <span>
        <span>
          Tuesday
        </span>
         - 
        <span>
          01/01/2019
        </span>
         -
         
        <span>
          9:00 PM
        </span>
      </span>
    </div>
    <pre
      className="sc-htoDjs hEHbwl"
    >
      Offender enjoys attending the gym.
    </pre>
    <div
      className="sc-bwzfXH iaUqUE"
    >
      <h3
        className="sc-bdVaJa dbbMZC"
      >
        Amendment
      </h3>
      <pre
        className="sc-htpNat bSPCkp"
      >
        Offender says he doesn't like the gym.
      </pre>
      <div
        className="sc-bxivhb deBXyH"
      >
        <span>
          Tuesday
        </span>
         - 
        <span>
          01/29/2019
        </span>
         -
         
        <span>
          9:15 PM
        </span>
      </div>
      User, Test
    </div>
  </div>
</div>
`;

exports[`<CaseNoteListItem /> should render the with make amendments button snapshot 1`] = `
<div
  className="sc-ifAKCX guNQlg"
  data-qa="case-note"
>
  <div
    className="sc-EHOje iONyKS"
  >
    <span>
      Tuesday
    </span>
    <span>
      01/01/2019
    </span>
    <span>
      7:00 PM
    </span>
    User, Test
  </div>
  <div
    className="sc-bZQynM IutSs"
  >
    <h2
      className="sc-bdVaJa dbbMZC"
    >
      Achievements
       | 
      Gym
    </h2>
    <div
      className="sc-gzVnrw gNKPgp"
    >
      Creation date:
       
      <span>
        <span>
          Tuesday
        </span>
         - 
        <span>
          01/01/2019
        </span>
         -
         
        <span>
          9:00 PM
        </span>
      </span>
    </div>
    <pre
      className="sc-htoDjs hEHbwl"
    >
      Offender enjoys attending the gym.
    </pre>
    <div
      className="sc-bwzfXH iaUqUE"
    >
      <h3
        className="sc-bdVaJa dbbMZC"
      >
        Amendment
      </h3>
      <pre
        className="sc-htpNat bSPCkp"
      >
        Offender says he doesn't like the gym.
      </pre>
      <div
        className="sc-bxivhb deBXyH"
      >
        <span>
          Tuesday
        </span>
         - 
        <span>
          01/29/2019
        </span>
         -
         
        <span>
          9:15 PM
        </span>
      </div>
      User, Test
    </div>
    <a
      className="sc-dnqmqq kWGTec"
      href="/offenders/A12345/case-notes/1/amend-case-note"
      onClick={[Function]}
    >
      <button
        className="button-cancel"
        type="button"
      >
        Make amendment
      </button>
    </a>
  </div>
</div>
`;
